--- a/src/html/_token.html
+++ b/src/html/_token.html
@@ -145,7 +145,7 @@
                                     <div class="card__sums">
                                         <p class="card__sum">75 979,19</p>
                                         <div class="card__percents card__percents--red">
-                                            <div class="card__percent">+1 300,00</div>
+                                            <div class="card__percent">-1 300,00</div>
                                             <div class="card__percent">
                                                 <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                                 <span> 1,80%</span>
