--- a/src/html/_analytics.html
+++ b/src/html/_analytics.html
@@ -123,7 +123,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -203,7 +203,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -284,7 +284,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -383,7 +383,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -464,7 +464,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -552,7 +552,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -632,7 +632,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -712,7 +712,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
@@ -792,7 +792,7 @@
                             <div class="card__sums">
                                 <p class="card__sum">75 979,19</p>
                                 <div class="card__percents card__percents--red">
-                                    <div class="card__percent">+1 300,00</div>
+                                    <div class="card__percent">-1 300,00</div>
                                     <div class="card__percent">
                                         <img width="12" height="12" src="./img/icons/down.svg" alt="arrow down">
                                         <span> 1,80%</span>
