added fix and new start page

--- a/src/html/_start-2.html
+++ b/src/html/_start-2.html
@@ -13,10 +13,15 @@
       </h2>
     </div>
 
+
     <div class="start__footer">
+      <div class="start__inputs">
+        <input class="start__input" type="email" placeholder="Enter E-mail ">
+        <input class="start__input" type="password" placeholder="Password">
+      </div>
+
       <div class="start__btns">
-        <a href="#" class="start__btn btn">Connect telegram</a>
-        <a href="#" class="start__btn btn-outline">sign up with e-mail</a>
+        <a href="#" class="start__btn btn">sign up</a>
       </div>
     </div>
 
